--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-inline-css",
-  "description": "Inline CSS in your React components, namespaced automatically.",
-  "version": "1.2.1",
+  "name": "zt-react-inline-css",
+  "description": "Inline CSS in your React components, namespaced automatically, supports passing the className prop.",
+  "version": "1.2.2",
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
